syntax = "proto3";
import "google/protobuf/any.proto";
option java_package = "de.sg_o.proto.tagy.query";
option java_outer_classname = "MetaDataQueryBuilderProto";

//SpecVersion: 1

message MetaDataQueryBuilder {
  string projectName = 1;
  repeated google.protobuf.Any queryElements = 2;
}