syntax = "proto3";
import "query/queryElement.proto";
option java_package = "de.sg_o.proto.tagy.query";
option java_outer_classname = "EndsWithProto";

//SpecVersion: 1

message EndsWith {
  QueryElement queryElement = 1;
  string stringValue = 2;
}